# Hashnode-Clone

./: README.md  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/backend/hashnode/: apps.py  models.py
backend/backend/hashnode/api/: views.py
backend/backend/hashnode/migrations/: 0001_initial.py
backend/backend/userAccount/migrations/: 0001_initial.py
backend/core/: asgi.py  settings.py  urls.py
backend/core/settings/: base.py  development.py  production.py
backend/hashnode/: admin.py  models.py
backend/hashnode/api/: serializers.py  urls.py  views.py
backend/hashnode/migrations/: 0001_initial.py
backend/notifications/: consumers.py  routing.py  serializers.py  urls.py
backend/notifications/api/: consumers.py  routing.py  serializers.py
backend/project/: db.sqlite3  urls.py
backend/project/settings/: base.py  development.py
backend/userAccount/: admin.py  forms.py  models.py  urls.py  views.py
backend/userAccount/migrations/: 0001_initial.py  0002_customuser_follow.py  0003_alter_customuser_img.py  0003_remove_customuser_test_customuser_bio_and_more.py  0004_customuser_available_for.py  0005_customuser_location.py  0006_rename_available_for_customuser_available_for_and_more.py  0007_rename_website_url_customuser_website.py  0008_rename_full_name_customuser_fullname.py  0009_alter_customuser_available_for.py
backend_with_poetry/: pyproject.toml
backend_with_venv/: .gitignore
backendd/: Procfile  requirements.txt
frontend/: .gitignore  README.md  (+2 more)
(+77 files in other folders)
