[tool.poetry]
name = "backend-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
django-cors-headers = "^3.14.0"
djangorestframework = "^3.14.0"
dj-rest-auth = "^3.0.0"
django-allauth = "^0.52.0"
drf-spectacular = "^0.26.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.4.0"
python = "^3.7"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
